html hardcode timeblocks

--- a/index.html
+++ b/index.html
@@ -20,11 +20,56 @@
     </header>
     <div class="container">
         <!-- Timeblocks go here -->
-    </div>
+        <div class="row d-flex justify-content-between time-block border border-1 border-primary" id="9a">
+            <div class="col-1 pl-0 pt-2 text-right">9AM</div>
+            <textarea class="col-10 description "></textarea>
+            <button class="col-1 saveBtn"><i class="fas fa-save "></i></button>
+        </div>
+        <div class="row d-flex justify-content-between time-block border border-1 border-primary" id="10a">
+            <div class="col-1 pl-0 pt-2 text-right">10AM</div>
+            <textarea class="col-10 description"></textarea>
+            <button class="col-1 saveBtn "><i class="fas fa-save "></i></button>
+        </div>
+        <div class="row d-flex justify-content-between time-block border border-1 border-primary" id="11a">
+            <div class="col-1 pl-0 pt-2 text-right">11AM</div>
+            <textarea class="col-10 description"></textarea>
+            <button class="col-1 saveBtn "><i class="fas fa-save "></i></button>
+        </div>
+        <div class="row d-flex justify-content-between time-block border border-1 border-primary" id="12p">
+            <div class="col-1 pl-0 pt-2 text-right">12PM</div>
+            <textarea class="col-10 description"></textarea>
+            <button class="col-1 saveBtn "><i class="fas fa-save "></i></button>
+        </div>
+        <div class="row d-flex justify-content-between time-block border border-1 border-primary" id="1p">
+            <div class="col-1 pl-0 pt-2 text-right">1PM</div>
+            <textarea class="col-10 description"></textarea>
+            <button class="col-1 saveBtn "><i class="fas fa-save "></i></button>
+        </div>
+        <div class="row d-flex justify-content-between time-block border border-1 border-primary" id="2p">
+            <div class="col-1 pl-0 pt-2 text-right">2PM</div>
+            <textarea class="col-10 description"></textarea>
+            <button class="col-1 saveBtn "><i class="fas fa-save "></i></button>
+        </div>
+        <div class="row d-flex justify-content-between time-block border border-1 border-primary" id="3p">
+            <div class="col-1 pl-0 pt-2 text-right">3PM</div>
+            <textarea class="col-10 description"></textarea>
+            <button class="col-1 saveBtn "><i class="fas fa-save "></i></button>
+        </div>
+        <div class="row d-flex justify-content-between time-block border border-1 border-primary" id="4p">
+            <div class="col-1 pl-0 pt-2 text-right">4PM</div>
+            <textarea class="col-10 description"></textarea>
+            <button class="col-1 saveBtn "><i class="fas fa-save "></i></button>
+        </div>
+        <div class="row d-flex justify-content-between time-block border border-1 border-primary" id="5p">
+            <div class="col-1 pl-0 pt-2 text-right">5PM</div>
+            <textarea class="col-10 description"></textarea>
+            <button class="col-1 saveBtn "><i class="fas fa-save "></i></button>
+        </div>
 
-    <script src="./assets/js/script.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+
+        <script src="./assets/js/script.js "></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js "></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js "></script>
 </body>
 
 </html>
